# tufte_style_plots

./: CLAUDE.md  LICENSE  README.md  TEST_RESULTS.md  pyproject.toml
docs/: LIMITATIONS.md  SPECIFICATION.md  TUFTE_RESOURCES_SURVEY.md
examples/: comprehensive_test.py  generate_examples.py
tufte_style_plots/: __init__.py  core.py  styles.py  utils.py
